--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>3D Interior Design Tool</title>
+<title>3D Interior Design - GitHub Pages Ready</title>
 <style>
   body { margin:0; overflow:hidden; font-family: Arial, sans-serif; }
   #sidebar {
