--- a/index.html
+++ b/index.html
@@ -1,180 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>3D Interior Design - GitHub Pages Ready</title>
-<style>
-  body { margin:0; overflow:hidden; font-family: Arial, sans-serif; }
-  #sidebar {
-    position:absolute; top:10px; left:10px; width:200px; background:#f0f0f0; padding:10px; z-index:10; 
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.2); border-radius:8px;
-  }
-  #instructions {
-    position:absolute; bottom:10px; left:10px; width:250px; background:#ffffffcc; padding:10px;
-    font-size:13px; border-radius:8px; box-shadow: 1px 1px 5px rgba(0,0,0,0.2); z-index:10;
-  }
-  .item { margin:10px 0; cursor:pointer; text-align:center; }
-  button { margin-top:5px; width:100%; padding:5px; cursor:pointer; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interior Design Drawing Studio</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
+            background: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background: #2c3e50;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            font-size: 2.5em;
+        }
+
+        .toolbar {
+            background: #ecf0f1;
+            padding: 10px;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+
+        .toolbar button, .toolbar input, .toolbar select {
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1em;
+        }
+
+        .toolbar button:hover {
+            background: #e67e22;
+            color: #fff;
+        }
+
+        .canvas-container {
+            display: flex;
+            justify-content: center;
+            padding: 20px;
+            background: #fff;
+            margin: 20px auto;
+            max-width: 1000px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+        }
+
+        #drawingCanvas {
+            border: 2px solid #2c3e50;
+            background: #fff;
+            cursor: crosshair;
+        }
+
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 15px;
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .gallery img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 10px;
+            transition: transform 0.3s;
+        }
+
+        .gallery img:hover {
+            transform: scale(1.05);
+        }
+
+        footer {
+            background: #2c3e50;
+            color: #fff;
+            text-align: center;
+            padding: 15px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+
+        @media (max-width: 768px) {
+            .toolbar {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .canvas-container {
+                padding: 10px;
+            }
+
+            .gallery {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Interior Design Drawing Studio</h1>
+        <p>Sketch Your Dream Space</p>
+    </header>
 
-<div id="sidebar">
-  <h3>Furniture</h3>
-  <div class="item" data-type="sofa">🛋 Sofa</div>
-  <div class="item" data-type="table">🪑 Table</div>
-  <div class="item" data-type="bed">🛏 Bed</div>
-  <button onclick="toggleWallMode()">Toggle Wall Drawing</button>
-  <button onclick="clearScene()">Clear Scene</button>
-</div>
+    <section class="toolbar">
+        <button onclick="setTool('pencil')">Pencil</button>
+        <button onclick="setTool('eraser')">Eraser</button>
+        <button onclick="setTool('rectangle')">Rectangle</button>
+        <button onclick="clearCanvas()">Clear Canvas</button>
+        <input type="color" id="colorPicker" value="#000000" onchange="setColor(this.value)">
+        <select id="lineWidth" onchange="setLineWidth(this.value)">
+            <option value="2">Thin</option>
+            <option value="5">Medium</option>
+            <option value="10">Thick</option>
+        </select>
+        <button onclick="saveDrawing()">Save Drawing</button>
+    </section>
 
-<div id="instructions">
-  <b>Instructions:</b><br>
-  - Click furniture to add<br>
-  - Toggle wall mode to draw walls (click two points)<br>
-  - Drag furniture to move<br>
-  - Rotate view: Left-click + drag<br>
-  - Pan view: Right-click + drag<br>
-  - Zoom: Mouse wheel
-</div>
+    <section class="canvas-container">
+        <canvas id="drawingCanvas" width="800" height="400"></canvas>
+    </section>
 
-<script type="module">
-import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.164.0/build/three.module.js';
-import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.164.0/examples/jsm/controls/OrbitControls.js';
+    <section class="gallery">
+        <h2 style="text-align: center; font-size: 1.8em; margin-bottom: 20px;">Inspiration Gallery</h2>
+        <!-- Replace with actual interior design images -->
+        <img src="https://via.placeholder.com/250x150?text=Living+Room" alt="Living Room">
+        <img src="https://via.placeholder.com/250x150?text=Bedroom" alt="Bedroom">
+        <img src="https://via.placeholder.com/250x150?text=Kitchen" alt="Kitchen">
+        <img src="https://via.placeholder.com/250x150?text=Office" alt="Office">
+    </section>
 
-let scene, camera, renderer, controls;
-let walls = [], furniture = [];
-let wallMode = false;
-let wallStart = null;
-let raycaster = new THREE.Raycaster();
-let mouse = new THREE.Vector2();
-let selectedFurniture = null;
-let offset = new THREE.Vector3();
+    <footer>
+        <p>&copy; 2025 Interior Design Drawing Studio. All rights reserved.</p>
+    </footer>
 
-// --- Scene setup ---
-scene = new THREE.Scene();
-scene.background = new THREE.Color(0xf0f0f0);
+    <script>
+        const canvas = document.getElementById('drawingCanvas');
+        const ctx = canvas.getContext('2d');
+        let isDrawing = false;
+        let tool = 'pencil';
+        let startX, startY;
 
-camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 1000);
-camera.position.set(10,10,10);
+        // Set initial canvas properties
+        ctx.lineCap = 'round';
+        ctx.lineJoin = 'round';
+        ctx.strokeStyle = '#000000';
+        ctx.lineWidth = 2;
 
-renderer = new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(window.innerWidth, window.innerHeight);
-document.body.appendChild(renderer.domElement);
+        // Set drawing tool
+        function setTool(selectedTool) {
+            tool = selectedTool;
+        }
 
-controls = new OrbitControls(camera, renderer.domElement);
-controls.enableDamping = true;
+        // Set color
+        function setColor(color) {
+            ctx.strokeStyle = color;
+            if (tool === 'eraser') {
+                ctx.strokeStyle = '#ffffff';
+            }
+        }
 
-// Floor
-const floorGeometry = new THREE.PlaneGeometry(20,20);
-const floorMaterial = new THREE.MeshStandardMaterial({color:0xdddddd});
-const floor = new THREE.Mesh(floorGeometry, floorMaterial);
-floor.rotation.x = -Math.PI/2;
-scene.add(floor);
+        // Set line width
+        function setLineWidth(width) {
+            ctx.lineWidth = width;
+        }
 
-// Lights
-const ambient = new THREE.AmbientLight(0xffffff, 0.6);
-scene.add(ambient);
-const dirLight = new THREE.DirectionalLight(0xffffff, 0.8);
-dirLight.position.set(10,20,10);
-scene.add(dirLight);
+        // Start drawing
+        canvas.addEventListener('mousedown', (e) => {
+            isDrawing = true;
+            startX = e.offsetX;
+            startY = e.offsetY;
+            if (tool !== 'rectangle') {
+                ctx.beginPath();
+                ctx.moveTo(startX, startY);
+            }
+        });
 
-// Wall material
-const wallMaterial = new THREE.MeshStandardMaterial({color:0xffffff});
+        // Draw on canvas
+        canvas.addEventListener('mousemove', (e) => {
+            if (!isDrawing) return;
+            const x = e.offsetX;
+            const y = e.offsetY;
 
-// --- Functions ---
-window.toggleWallMode = function() { wallMode = !wallMode; wallStart = null; }
-window.clearScene = function() {
-  walls.forEach(w=>scene.remove(w));
-  furniture.forEach(f=>scene.remove(f));
-  walls=[]; furniture=[];
-}
+            if (tool === 'pencil' || tool === 'eraser') {
+                ctx.lineTo(x, y);
+                ctx.stroke();
+            } else if (tool === 'rectangle') {
+                // Clear canvas temporarily to redraw rectangle
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                ctx.beginPath();
+                ctx.strokeRect(startX, startY, x - startX, y - startY);
+            }
+        });
 
-// --- Wall drawing ---
-function createWall(start, end){
-  const length = start.distanceTo(end);
-  const wallGeom = new THREE.BoxGeometry(length,3,0.2);
-  const wall = new THREE.Mesh(wallGeom, wallMaterial);
-  wall.position.set((start.x+end.x)/2, 1.5, (start.z+end.z)/2);
-  const angle = Math.atan2(end.z - start.z, end.x - start.x);
-  wall.rotation.y = -angle;
-  scene.add(wall);
-  walls.push(wall);
-}
+        // Stop drawing
+        canvas.addEventListener('mouseup', () => {
+            isDrawing = false;
+            ctx.closePath();
+        });
 
-// --- Simple furniture creation ---
-function createFurniture(type){
-  let geom, material;
-  material = new THREE.MeshStandardMaterial({color:0x8B4513});
-  switch(type){
-    case 'sofa': geom = new THREE.BoxGeometry(2,1,1); break;
-    case 'table': geom = new THREE.CylinderGeometry(0.5,0.5,1,16); break;
-    case 'bed': geom = new THREE.BoxGeometry(2,0.5,1.5); break;
-    default: geom = new THREE.BoxGeometry(1,1,1);
-  }
-  const obj = new THREE.Mesh(geom, material);
-  obj.position.set(0, geom.parameters.height/2 || 0.5,0);
-  scene.add(obj);
-  furniture.push(obj);
-}
+        canvas.addEventListener('mouseout', () => {
+            isDrawing = false;
+        });
 
-// Furniture buttons
-document.querySelectorAll('.item').forEach(it=>{
-  it.addEventListener('click', ()=>createFurniture(it.dataset.type));
-});
+        // Clear canvas
+        function clearCanvas() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+        }
 
-// --- Mouse interaction ---
-renderer.domElement.addEventListener('mousedown', onMouseDown, false);
-renderer.domElement.addEventListener('mousemove', onMouseMove, false);
-renderer.domElement.addEventListener('mouseup', ()=>{ selectedFurniture=null; }, false);
-
-function getMouseIntersection(event){
-  const rect = renderer.domElement.getBoundingClientRect();
-  mouse.x = ((event.clientX - rect.left)/rect.width)*2 -1;
-  mouse.y = -((event.clientY - rect.top)/rect.height)*2 +1;
-  raycaster.setFromCamera(mouse, camera);
-  const intersects = raycaster.intersectObject(floor);
-  return intersects.length>0 ? intersects[0].point : null;
-}
-
-function onMouseDown(event){
-  const point = getMouseIntersection(event);
-  if(!point) return;
-  if(wallMode){
-    if(!wallStart){ wallStart = point; } 
-    else { createWall(wallStart, point); wallStart=null; }
-  } else {
-    raycaster.setFromCamera(mouse, camera);
-    const intersects = raycaster.intersectObjects(furniture);
-    if(intersects.length>0){ 
-      selectedFurniture = intersects[0].object; 
-      offset.copy(intersects[0].point).sub(selectedFurniture.position); 
-    }
-  }
-}
-
-function onMouseMove(event){
-  if(selectedFurniture){
-    const point = getMouseIntersection(event);
-    if(point) selectedFurniture.position.copy(point).sub(offset);
-  }
-}
-
-// --- Animate ---
-function animate(){
-  requestAnimationFrame(animate);
-  controls.update();
-  renderer.render(scene, camera);
-}
-animate();
-
-// --- Resize ---
-window.addEventListener('resize', ()=>{
-  camera.aspect = window.innerWidth/window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-});
-</script>
+        // Save drawing
+        function saveDrawing() {
+            const link = document.createElement('a');
+            link.download = 'interior_design_sketch.png';
+            link.href = canvas.toDataURL();
+            link.click();
+        }
+    </script>
 </body>
 </html>
